--- a/docs/_posts/2020-12-01-blog-12.md
+++ b/docs/_posts/2020-12-01-blog-12.md
@@ -4,7 +4,7 @@ title:  "Blog 12"
 date:   2020-12-01 12:01:00 -0700
 categories: jekyll update
 ---
-<h1><b>The logic behind a Timed Typing Test Using Javascript</b></h1>
+<h1><b>The Logic Behind a Timed Typing Test Using Javascript</b></h1>
 
 <h2><b>Timed Typing Test Page</b></h2>
 
@@ -23,11 +23,11 @@ categories: jekyll update
 </ul>
 
 <h2><b>Explanation</b></h2>
-<img src ="https://gyazo.com/6ff33c2efa303fc34b1f696afd09c56f">
+<img src ="https://i.gyazo.com/6ff33c2efa303fc34b1f696afd09c56f.png">
 <p>From lines 1 to 24, I declared my global variables that I will be using throughout my entire code. The values or content in these variables will be dynamic as it goes through multiple functions. Lines 1 to 9 are variables that target certain HTML tags in my HTML page. These variables will be referred back to these tags as it makes life a little easier to use variables instead of typing, for example, document.querySelector(&quot;.test-wrapper&quot;) all the time when executing preexisting methods/functions for certain parts in the code. Line 10 rewrites my p tag in my HTML tag with the origin-text id with the string displayed in the screenshot. Keep in mind, these does not physically write into the HTML page as it would be a security issue. The rest of the global variables below of line 10 are variables I will be using in multiply functions as it has many various uses to it as I go through more of the Javascript code. As you can see, I set up two arrays called &quot;text&quot; and &quot;array&quot;. The &quot;text&quot; array will be used to dynamically change the text/prompt that the user would need to type. The &quot;array&quot; array will display the leaderboards.
 </p>
 
-<img src ="https://gyazo.com/908fbf1d2c73dfe20f80a1cd2fe3445a">
+<img src ="https://i.gyazo.com/908fbf1d2c73dfe20f80a1cd2fe3445a.png">
 <p>From lines 26 to 30, I set up my event listeners. Event listeners executes certain functions based on what the user input on the HTML page. The way how users may execute these functions can vary, whether it would be a keyboard input or mouse input on a certain part on the HTML page solely depends on the preexisting conditions. Line 26 is the event listener for when the user clicks on the &quot;New Text&quot; button, it will run the &quot;changeText&quot; function. Line 27 is the event listener for when the user clicks on the &quot;Next Text&quot; button, it will run the reset function. Line 28 is the event listener for when the user presses a key in the &quot;test area&quot; location of the HTML tag, it will start the clock. Line 29 is the event listener for when the user releases the key in the &quot;test area&quot; of the HTML tag, it will run the &quot;compareString&quot; function. Finally, line 30 is the event listener for when the user clicks on the &quot;reset&quot; button, it will run the reset function.
 </p>
 
@@ -35,7 +35,7 @@ categories: jekyll update
 <p>This function calculates the words per minute and displays it on the HTML page for the user to view. The way how I did it was I set &quot;originWordCount&quot; to 0. This would be my word counter for the original prompt/text only because Javascript cannot physically write onto the HTML tag; therefore, there will be two function calculating the words per minute. From there, I set a variable and grabbed the string written from the HTML file. I used the spl it function to split the strings by spaces and the variable is now an array. I established a for-loop to iterate through the array to count how many words there are in the array since each word is an element of the array. With some simple math, I take the words divided by the time (in miliseconds) and convert it to words per minute. From there, I display the words per minute for the original prompt/text.
 </p>
 
-<img src ="https://i.gyazo.com/7c03e4848e0df979b3fd26b4972ce149.png">
+<img src ="https://i.gyazo.com/b38ce41d7de7bd4823129a85e24abb1f.png">
 <p>This function cycles through the &quot;text&quot; array when the &quot;New Text&quot; button is click. I set the variable of original to false when this function fires because changing the text/prompt will ensure that the originalwpm function will never fire since it is no longer the original text/prompt. Everytime when the user clicks the &quot;New Text&quot; button, it is almost a reset button, but it changes the text/prompt. I have to set the accuracy and words per minute back to 0. Next, I'll have to iterate through the next element of the array using a while loop to have the prompt display a new string for the user to type. However, I will need a &quot;break&quot; statement because I don't want it to infinitely through through all of elements of the text. When the while loop fires, I need to calculate how many words there are in the &quot;countArray&quot; so I decide to split the string by spaces. Like what I did for the originalwpm function, I used a for loop to count how many words/elements are there in the array. The problem now is that once k hits the length of the array, the &quot;New Text&quot; button will break. Therefore, I put an if statement to create an infinite but nonsimutaneous loop so it go through the &quot;text&quot; array again when k is equal to &quot;text.length&quot;.
 </p>
 
@@ -47,15 +47,15 @@ categories: jekyll update
 <p>The clock function may seem intimidating, but I can guarantee you it is not all that bad. The most important thing to note in the first few lines of code is to set up the variables for miliseconds, seconds, and minutes. I also included a separate variable called &quot;time&quot; and it basically functions the same as milliseconds because I needed the variable time to be use for calling my originalwpm and wpm functions as mentioned above. Next, I named a variable called &quot;start&quot; which will run the setInterval function so the clock can run in realtime. From there, the function that sets up the timer is pretty much self explanatory. Everyone should know that every 1000 miliseconds is equal to 1 second, but I am running a two digit milisecond timer; therefore, I will need to compensate by removing a zero in the conversion from miliseconds. The rest of the code is to format the clock so it display a leading zero when applicable and displays on the page. The last parameter for the setInterval function updates how often the clock should update to the user. In this case, I decided to update it every 10 miliseconds per miliseconds to the user because I am using a two digit milisecond timer.
 </p>
 
-<img src="https://i.gyazo.com/040fda0d68759103124568bac808458c.png">
+<img src="https://i.gyazo.com/5d6458595aa64d600038c1bf50ea4807.png">
 <p>The event function runs the clock function and removes the event listener in the test area so it does not reset the clock everytime the user types something into the test area.
 </p>
 
-<img src ="https://i.gyazo.com/36f6b940d7af0f85aefac597432bbbf4.png">
+<img src ="https://i.gyazo.com/c2c8625d5caa9ab4df82dae68c32178b.png">
 <P>This function primarily checks whether the user inputted the correct string. I set up a variable called &quot;testLength&quot; to grab the string of what the user has input. Starting at line 126, I need to check whether the user has input the correct letter or not. If the user did not input the right letter, then it will keep track of how many errors there are, how many letters have been typed, display the border as red, and adds an event listener in which the user can press backspace to make changes. Once the user presses backspace, then it will decrease the error by 1 and how many letters the user has typed by 1. If the user inputs the correct letter, then the border will turn green, keep track of the number of letters the user has typed, and remove the event listener for backspace since there is no need for the user to make changes if he or she has typed it correctly. Starting at line 148, when the user types the maximum number of letters as it shown in the prompt, then it will stop the clock, shows the accuracy, the words per minute, and runs &quot;compareResults&quot; function passing the &quot;displayTime&quot; variable which targets the leaderboards on the HTML page.
 </P>
 
-<img src="https://i.gyazo.com/975c3f7c03e5934bb33989ec3671c77e.png">
+<img src="https://i.gyazo.com/e5be1704b1ab2505c1eeddd7be76de86.png">
 <p>This function does the math and calculates the accuracy, in percent, and returns the value back. The way how I calculate the accuray is taking the number of letters in the string of the prompt and subtract how many letters the user got wrong and then dividing it by the total number of letters from the prompt. From there, I multiply the decimal by 100 and concatenate it with a percent symbol.
 </p>
 
