--- a/docs/_posts/2020-12-01-blog-12.md
+++ b/docs/_posts/2020-12-01-blog-12.md
@@ -4,7 +4,7 @@ title:  "Blog 12"
 date:   2020-12-01 12:01:00 -0700
 categories: jekyll update
 ---
-<h1><b>The Logic Behind a Timed Typing Test Using Javascript</b></h1>
+<h1><b>The Logic Behind A Timed Typing Test Using Javascript</b></h1>
 
 <h2><b>Timed Typing Test Page</b></h2>
 
