--- a/docs/_posts/2021-02-02-blog-13.md
+++ b/docs/_posts/2021-02-02-blog-13.md
@@ -22,7 +22,7 @@ categories: jekyll update
 <li>G-Skill DDR4 16GB (total)</li>
 </ul>
 
-<h2><b>The Experience</b><h2>
+<h2><b>The Experience</b></h2>
 <p>I have watched videos and tutorial about how people build their own PCs, but this would be my first time and first attempt at building one. I was a little nervous at first because I do not want to damage or accidentally short-circuit one of computer parts as each computer parts is quite expensive and I was on a tight budget. However, I managed to get some advice from my friends prior to building my PC which made the entire situation bearable and manageable. When I began building my PC, I quickly took out my CPU and secured it by immediately and carefully inserting it into the motherboard. I know that the AMD CPUs are quite different from the Intel CPUs. The AMD CPUs have its pins on the CPU itself instead of the pins being on the motherboard. Because the pins are on the CPUs, it is prone to being damaged or bent if it is being mishandled. After securing the CPU, I installed my Kraken X63 which is a liquid cooler. It was a simple installation. I had to remove the original prongs that were meant to hold onto the CPU stock fan and replace them with prongs that kept the Kraken X63 in place. Once the liquid cooler is installed onto the motherboard, I then screwed the motherboard onto the case. I made sure the screws were tight but not too tight to crack or damage the motherboard. Screwing the liquid cooler's fans onto the radiator and then screwing the entire radiation onto the ceiling of the case were pretty much simple to do. From there, I made a mistake of installing the radiator before connecting all of the corresponding pins from various computer parts to the motherboard because the radiator blocks the amount of space I need for my fingers to install the pins. As a result, I unscrewed the radiator and installed all the corresponding pins to the motherboard using the manual. The manual I had displays the entire blueprint of the motherboard and describe each socket. Using this information, I plugged in all the pins minus the RGB header and molex pins from the liquid cooler, power supply unit, the case, and case fans. Once all the pins are plugged into the motherboard, I screwed the radiator back to the ceiling of my case, insert the RAM and GPU by pressing the down a lever and sliding it in, and I was done. The moment of truth came when I closed my PC case, hooked it up to my monitor , and turn it on. Sure enough, the PC booted to the BIOS settings and I breathe a sign of relief. Most newbies would not have their PCs boot to their BIOS on their first attempt. However, I was skilled and careful enough to ensure that everything was screwed in, plugged in, and tighten properly. The entire process took about 6 hours in 2 days.
 </p>
 
