--- a/docs/_posts/2021-02-21-blog-15.md
+++ b/docs/_posts/2021-02-21-blog-15.md
@@ -5,7 +5,7 @@ date:   2021-02-21 12:01:00 -0700
 categories: jekyll update
 ---
 
-<h1><b>Burpsuite Installtion</b></h1>
+<h1><b>Burpsuite Installation</b></h1>
 
 <h2><b>Introduction</b></h2>
 <p>Hello all! As you all recall, last week's blog is about me exploiting websites that uses Indirect Object Referencing to access restricted information and retrieve keys from a website. I've figured that most of you are excited and anxious to learn how to use BurpSuite to exploit websites that are designed to challenge young hackers, like yourself, to exploit more than just IDOR vulnerabilities. I bet some of you guys tried to install Burpsuite, but were unable to do so because you guys received a certificate issue, but no fear! For today's tutorial, I'll be teaching you how to properly install Burpsuite, step by step, and utilize some of BurpSuite's functions to do so. BurpSuite is a web application attack tool that is mainly used for pen testing. It basically does what you want to as long as you know the many functions that are contained within the application. Using BurpSuite to scan and attack website is legal <strong>IF</strong> you are given permission; otherwise, it is <strong>ILLEGAL</strong> to use BurpSuite to attack websites without given permission from the proper owners. Anyways, installing BurpSuite is a simple task and I'll show all of you how easy it is right down below. Keep in mind, it is best to download everything using Mozilla Firefox as it makes life much more easier on all of you. With that said, let's begin! </p>
