--- a/docs/_posts/2021-04-17-blog-21.md
+++ b/docs/_posts/2021-04-17-blog-21.md
@@ -9,11 +9,11 @@ categories: jekyll update
 
 <h2><b>Introduction</b></h2>
 
-<p>Hello all! To recape what I went through last week, linked list are dynamic arrays in which to access the data of the nth index requires us to travese through n - 1 nodes to pull data. This type of data structure essential in the programming world because the amount data given to us can vary. In the last blog, I went over the properties of what makes a linked list a linked list along with the difference between singly and soubly linked list. As promised, for today's blog, I'll be showing and explaining to you the code for creating a linked list. Keep in mind, this would most likely make sense to people who have some sort of knowledge of object orientted programming because the code involves using constructors to give objects their properties. In addition, the code I'll be showing is written in Python; therefore, some knowledge of Python syntax is required. Without further a do, let's begin! </p>
+<p>Hello all! To recap through what I went through last week, linked list are dynamic arrays in which to access the data of the nth index requires us to travese  n - 1 nodes to pull data. This type of data structure essential in the programming world because the amount data given to us can vary. In the last blog, I went over the properties of what makes a linked list a linked list along with the difference between singly and doubly linked list. As promised, for today's blog, I'll be showing and explaining to you the code for creating a linked list. Keep in mind, this would most likely make sense to people who have some sort of knowledge of object oriented programming because the code involves using constructors to give objects their properties. In addition, the code I'll be showing is written in Python; therefore, some knowledge of Python syntax is required. Without further a do, let's begin! </p>
 
 <h2><b>The Objects</b></h2>
 <img src ="https://i.gyazo.com/2fc1d87ef1c1deab24d0c3695218e0d6.png">
-<p>First thing first, we need to create the actual object. Creating the functionality of a linked list requires two parts which are the node and the linked list itself. When creating the node object, we need create a __init__ function to initialize the default values of the node's properties. Because we are manually going to input data into these nodes, we are going to declare the data within the nodes as null, meaning they contain no value. Also, since we are making only one node our next iteration of our node indicated by .next will need to be remain null. As a result, you basically construct a single node that you can create when coding the rest of the linked list. The next object we're going over is the list. There are many ways to generate a linked list, but for the purpose of this code, we'll be using self.head as a placeholder instead of a node containg actual header. Using this kind of method will allow us to traverse through the linked list when implmenting functions such as deleting node and inserting nodes.</p>
+<p>First thing first, we need to create the actual object. Creating the functionality of a linked list requires two parts which are the node and the linked list itself. When creating the node object, we need create a __init__ function to initialize the default values of the node's properties. Because we are manually going to input data into these nodes, we are going to declare the data within the nodes as null, meaning they contain no value. Also, since we are making only one node our next iteration of our node indicated by .next will need to be remain null. As a result, you basically construct a single node that you can create when coding the rest of the linked list. The next object we're going over is the list. There are many ways to generate a linked list, but for the purpose of this code, we'll be using self.head as a placeholder instead of a node containing actual header. Using this kind of method will allow us to traverse through the linked list when implementing functions such as deleting node and inserting nodes.</p>
 
 <h2><b>The Function</b></h2>
 <img src ="https://i.gyazo.com/1e90426f07c478abfe41a5b1a51ae420.png">
