--- a/docs/_posts/2021-05-03-blog-23.md
+++ b/docs/_posts/2021-05-03-blog-23.md
@@ -20,7 +20,7 @@ categories: jekyll update
 </p>
 
 <h2><b>Properties</b></h2>
-<p>Let's go over some porperties about binary trees. The first thing we will go over are levels. Levels is each hierarchial tier from the root to the leaves starting at 0. For example, the root node is level 0, its child nodes are at level 1, and the leaves are at level 2. The rest is self explanatory. We can calculate the maximum number of nodes based on the hierachial level the tree has. Let's denote the number of levels the binary tree has as "l", using the equation 2<sup>l</sup>. For example, in the picture above, the binary tree has a level of 2. Plugging it into the equation, 2<sup>2<sup> gives us 4. This solution means that at level 2 of the binary tree, the maximum number of nodes that the tree can have on that level is 4.
+<p>Let's go over some porperties about binary trees. The first thing we will go over are levels. Levels is each hierarchial tier from the root to the leaves starting at 0. For example, the root node is level 0, its child nodes are at level 1, and the leaves are at level 2. The rest is self explanatory. We can calculate the maximum number of nodes based on the hierachial level the tree has. Let's denote the number of levels the binary tree has as "l", using the equation 2<sup>l</sup>. For example, in the picture above, the binary tree has a level of 2. Plugging it into the equation, 2<sup>2</sup> gives us 4. This solution means that at level 2 of the binary tree, the maximum number of nodes that the tree can have on that level is 4.
 </p>
 
 <p>Another property about binary trees is the height. THe height of the binary tree is determined by the largest number of edges from the root node to the leaf node. To find the height of the binary tree is basically finding the height of the root. For example, in the picture above, the height of the tree is 2. Starting from the root, from node 1 to 3 will make 1 edge. From node 3 to node 9 will make 2 edges. We can also find the height of a particular node; however, there is a golden rule. The golden rule is a leaf node will always have a height of 0. This rule will mean that a binary tree that has a single node, which is the root node, will have a height of 0. To move forward, to find the height of node 3, we will need to determine the largest number of edges from node 3 to the leaf node. In this case, the height of node 3 will be 1.
